--- a/client/src/pages/office/office_homepage.html
+++ b/client/src/pages/office/office_homepage.html
@@ -79,7 +79,7 @@
           "PREVIOUS COUNT": "previousCount",
         };
         const table_query_data = {
-          q_name: "office_requests_details",
+          q_name: "office_requests",
           q_data: {},
         };
         const table_data_requester = new Requester(table_query_data, function (result) {
