--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -48,7 +48,7 @@
       }
 
       function activate_auto_compilation() {
-        $('req_id').focusout(function (e) {
+        $("#req_id").focusout(function (e) {
           generate_flavours(this.value);
         });
       }
