fixed error in query

--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -58,6 +58,7 @@
         set_date();
         get_products();
         activate_auto_compilation();
+        generate_flavours(11210);
       });
     </script>
   </head>
