Refactored ajax request api

--- a/client/src/pages/office/office_create.html
+++ b/client/src/pages/office/office_create.html
@@ -4,9 +4,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/xcash/bootstrap-autocomplete@v2.3.7/dist/latest/bootstrap-autocomplete.min.js"></script>
 
-    <script>
-        $("head").load("../../components/head.html?1232123");
-    </script>
+    <script>$("head").load("../../components/head.html?1232123");</script>
 
     <script>
         function set_date() {
